Revert "Add View, line graph api"
This reverts commit be960a66b92acb064ce738b482d74f8893a05aec.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ APTP_DB_flotting_project/bin/Debug/
 APTP_DB_flotting_project/obj/Debug/APTP_DB_flotting_project\.csproj\.FileListAbsolute\.txt
 
 APTP_DB_flotting_project/obj/Debug/
+
+APTP_DB_flotting_project/Visualizer\.resx
